# rust_swerve_sim

./: Cargo.toml  pyproject.toml
.cargo/: config.toml
python/: robot_comm_models.py  robot_comm_server.py  robot_sim_server.py  swerve_sim.py  swerve_sim_trajectory.py
src/: border_renderer.rs  field.rs  layout.rs  main.rs  robot.rs  robot_connection.rs
src/auto_pathing/: config_panel.rs  mod.rs  trajectory.rs  waypoints.rs
src/field/: mod.rs  objects.rs  render.rs  shapes.rs
src/layout/: border.rs  event.rs  mod.rs  render.rs
