[tool.poetry]
name = "rust_swerve_sim"
version = "0.1.0"
description = ""
authors = ["ethan <ethan.chapman0@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
robotpy-toolkit-7407 = "0.3.3"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
